--- a/Assignment_5_DeepLearning.ipynb
+++ b/Assignment_5_DeepLearning.ipynb
@@ -1129,9 +1129,9 @@
         "\n",
         "The second CNN clearly performs **much better** than Model 1. During training, the **training accuracy** keeps increasing steadily and reaches around **93%**, while the **validation accuracy** stabilizes around **83–84%**. This already shows that the model is learning useful patterns from the data and generalizing quite well to the validation set.\n",
         "\n",
-        "Compared to Model 1 (≈71% test accuracy), Model 2 achieves a **test accuracy of 0.8521**, which is a big improvement (more than +14%). The lower validation loss (around 0.5–0.6 instead of >1.0) also confirms that this architecture is stronger and less overfitted.\n",
+        "Compared to Model 1 (≈71% test accuracy), Model 2 achieves a **test accuracy of 0.8481**, which is a big improvement (more than +14%). The lower validation loss (around 0.5–0.6 instead of >1.0) also confirms that this architecture is stronger and less overfitted.\n",
         "\n",
-        "The small gap between train and validation accuracy suggests **mild overfitting**, but it is still under control thanks to **Batch Normalization** and **Dropout**. Overall, Model 2 is a much more effective and stable model for CIFAR-10 and is a good starting point for further tuning in Task 1.4.\n"
+        "The small gap between train and validation accuracy suggests **mild overfitting**, but it is still under control thanks to **Batch Normalization** and **Dropout**. Overall, Model 2 is a much more effective and stable model for CIFAR-10 and is a good starting point for further tuning in Task 1.4."
       ],
       "metadata": {
         "id": "blIIhwtF21Hl"
@@ -1268,7 +1268,7 @@
         "\n",
         "In Task 1.3, I designed and trained a second CNN model with the goal of improving performance while keeping the total number of parameters under the **4 million** limit. To achieve this, I added more convolutional blocks and incorporated **Batch Normalization** and **Dropout** in multiple stages. Batch Normalization helped stabilize training and allowed the model to learn faster, while Dropout reduced overfitting by forcing the network to rely on more robust features. Despite adding more layers, the total parameter count stayed safely within the requirement at around **817k parameters**, which is well below the 4M constraint.\n",
         "\n",
-        "The model achieved a **validation accuracy of around 83–84%** and a **test accuracy of 85.21%**, which is a significant improvement over Model 1’s ~71% test accuracy. The training and validation curves also showed much more stable learning behavior with reduced overfitting.\n",
+        "The model achieved a **validation accuracy of around 83–84%** and a **test accuracy of 84.81%**, which is a significant improvement over Model 1’s ~71% test accuracy. The training and validation curves also showed much more stable learning behavior with reduced overfitting.\n",
         "\n",
         "Overall, Task 1.3 successfully demonstrated how a carefully designed architecture—using normalization, regularization, and deeper feature extraction—can dramatically improve CIFAR-10 performance while remaining computationally efficient."
       ],
@@ -1759,7 +1759,7 @@
         "\n",
         "### **Generalization Performance**\n",
         "\n",
-        "* **Model 2:** ~0.85 test accuracy\n",
+        "* **Model 2:** 0.8481 test accuracy\n",
         "* **Model 3:** 0.8459 test accuracy\n",
         "\n",
         "Model 3 performs almost as well as Model 2, but **still does not surpass it**, even though it is deeper and uses more advanced layers such as Global Average Pooling.\n",
@@ -1933,11 +1933,11 @@
         ")"
       ],
       "metadata": {
-        "id": "5syLFvWigy5v",
-        "outputId": "11ab032a-cd88-45b9-8f7a-175205a171d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5syLFvWigy5v",
+        "outputId": "11ab032a-cd88-45b9-8f7a-175205a171d2"
       },
       "execution_count": 29,
       "outputs": [
@@ -2150,11 +2150,11 @@
         "print(\"Test Accuracy of Model 3 (with aug + callbacks):\", round(test_acc_3_aug, 4))"
       ],
       "metadata": {
-        "id": "vLVt_TCOg3rT",
-        "outputId": "c2284732-fef9-434e-c903-570fd0e4d01b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vLVt_TCOg3rT",
+        "outputId": "c2284732-fef9-434e-c903-570fd0e4d01b"
       },
       "execution_count": 30,
       "outputs": [
@@ -2195,12 +2195,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "Si7D3U-8g5LE",
-        "outputId": "f500a2de-b807-4bdb-ea4a-aab4c6fdc70e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 410
-        }
+        },
+        "id": "Si7D3U-8g5LE",
+        "outputId": "f500a2de-b807-4bdb-ea4a-aab4c6fdc70e"
       },
       "execution_count": 31,
       "outputs": [
@@ -2502,11 +2502,11 @@
         "print(classification_report(y_true, y_pred, target_names=class_names))"
       ],
       "metadata": {
-        "id": "4alOdGOBy2GQ",
-        "outputId": "858291d2-450e-4492-ac85-cb4b123ab130",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4alOdGOBy2GQ",
+        "outputId": "858291d2-450e-4492-ac85-cb4b123ab130"
       },
       "execution_count": 35,
       "outputs": [
@@ -2632,12 +2632,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "Zuod_ucxzKyz",
-        "outputId": "334ff9b3-acda-423a-ed36-2db82319b30e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 540
-        }
+        },
+        "id": "Zuod_ucxzKyz",
+        "outputId": "334ff9b3-acda-423a-ed36-2db82319b30e"
       },
       "execution_count": 36,
       "outputs": [
